--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,8 @@
     </plugin>
   </plugins>
 </build>
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+</properties>
 
 </project>
